# Vision-Transformers-from-scratch

./: .gitignore  README.md  pyproject.toml  requirements.txt  vision_trasnformers.ipynb
configs/: default.yaml
notebooks/: vision_transformers.ipynb
scripts/: train.py
src/: __init__.py
src/vit/: __init__.py  data.py  layers.py  models.py  train.py
tests/: test_models.py
